base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-surote-py-header
  labels:
    app: svc-surote-py-header
spec:
  ports:
    - port: 5124
  selector:
    app: surote-py-header
  type: ClusterIP
