base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: rt-surote-py-header
spec:
  path: /
  to:
    kind: Service
    name: svc-surote-py-header
    weight: 100
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
